Version 1.4 - 2015-05-29
* Add generic process report method
* Module creation