@@ -5,6 +5,8 @@ depends:
     cog_utils
     company_cog
     offered
+extras_depend:
+    report_engine
 xml:
     icon.xml
     contract.xml
@@ -17,3 +19,4 @@ xml:
     configuration.xml
     sub_status.xml
     event_type.xml
+    report.xml
