@@ -19,11 +19,6 @@
             <field name="inherit" ref="contract.contract_view_form"/>
             <field name="name">contract_form</field>
         </record>
-        <record model="ir.action.keyword" id="report_document_request_keyword">
-            <field name="keyword">form_action</field>
-            <field name="model">contract,-1</field>
-            <field name="action" ref="report_engine.letter_generation_wizard"/>
-        </record>
         <!--################################################################ -->
         <!-- Options Screens -->
         <!--################################################################ -->
