@@ -1,3 +1,5 @@
+* Enable one click printing or mail
+
 Version 1.4 - 2015-05-29
 * Add generic process report method
 * Module creation
